# Sloth

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Mechanics.md  QuickStart.md  README.md  Untitled.ipynb  benchmark.py  benchmark_results.csv  benchmark_results.html  clean.bat  clean.py  cythonize.py  dataframe.cp312-win_amd64.pyd  dataframe.cpp  dataframe.h  dataframe.pyx  deploy.bat  frame.dataframe.html  frame.html  frame.pxd  frame.pyx  frame.series.html  gen_rst.py  genindex.html  heat.ipynb  index.h  index.pxd  index.pyx  indexer.pxd  indexer.pyx  indexes.html  indexes.object.html  indexes.period.html  make.bat  objects.inv  (+21 more)
Sloth/: QuickStart.md  Untitled.ipynb  Untitled1.ipynb  __init__.py  clean.py  conversions.py  frame.c  frame.cp38-win_amd64.pyd  frame.pxd  frame.pyx  heat.ipynb  index.c  index.cp38-win_amd64.pyd  index.pxd  index.pyx  indexer.c  indexer.pxd  indexer.pyx  ipython_cell_input.py  resample.c  resample.cp312-win_amd64.pyd  resample.cp38-win_amd64.pyd  resample.pxd  resample.pyx  rolling.c  rolling.cp312-win_amd64.pyd  rolling.pxd  rolling.pyx  setup.py  test.ipynb  test.py  test.pyx  util.c  util.cp312-win_amd64.pyd  util.pxd  util.pyx
_modules/: index.html
_sources/: frame.dataframe.rst.txt  index.rst.txt  indexes.object.rst.txt
dataframe/: from_pandas.html
datetimeindex/: datetimeindex.html  get_item.html
doc/: conf.py
docs/: Sloth.rst
frame/: astype.html  dtype.html  frame.html  head.html  iat.html  iloc.html  iterrows.html  loc.html  plot.html  resample.html  rolling.html  tail.html  (+1 more)
(+121 files in other folders)
