[project]
name = "sloth"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Porter",email = "evanwporter@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "cython (>=3.0.11,<4.0.0)",
    "bottleneck (>=1.4.2,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

